--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,12 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginMVVM"
+        xmlns:commands="clr-namespace:LoginMVVM.Commands"
         xmlns:View="clr-namespace:LoginMVVM.View" x:Class="LoginMVVM.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Background="#FF826F6F">
+    <Window.CommandBindings>
+     
+    </Window.CommandBindings>
     <Grid>
 
         <View:UserControl1   HorizontalAlignment="Right" VerticalAlignment="Top"/>
-
+        <Button  Command="{}" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Log Out" />
+        
     </Grid>
 </Window>
