--- a/View/UserControl1.xaml
+++ b/View/UserControl1.xaml
@@ -15,7 +15,7 @@
     </UserControl.Resources>
 
     <UserControl.CommandBindings>
-        
+
     </UserControl.CommandBindings>
 
     <UserControl.DataContext >
@@ -26,7 +26,7 @@
         <WrapPanel>
             <Label Content="Status: Logged In" Visibility="{Binding LoggedInStatus, Converter={StaticResource BoolToVis}}" />
             <Label Content="Status: Not Logged In" Visibility="{Binding LoggedInStatus, Converter={StaticResource BoolToVisInverse}}" />
-            <Button Content="Log In" Visibility="{Binding LoggedInStatus, Converter={StaticResource BoolToVisInverse}}" />
+            <Button Command="{Binding LogOutCommand}" Content="Log In" Visibility="{Binding LoggedInStatus, Converter={StaticResource BoolToVisInverse}}" />
             <Button Command="{Binding LogOutCommand}" Content="Log Out" Visibility="{Binding LoggedInStatus, Converter={StaticResource BoolToVis}}" />
         </WrapPanel>
 
